# AI_money_mentor

./: .gitignore  README.md  package-lock.json  report.md  requirements.txt
Final_project/agents/: package.json  pyproject.toml
Final_project/agents/frontend/src/: App.jsx  index.css
Final_project/agents/frontend/src/api/: client.js
Final_project/agents/frontend/src/components/: Layout.jsx
Final_project/agents/frontend/src/pages/: FIREPlanner.jsx  Onboarding.jsx  TaxWizard.jsx
agents/: pyproject.toml  report.md
agents/outputs/: financial_profile.json  fire_roadmap.md
agents/src/agents/: __init__.py  crew.py  e2e_terminal.py  main.py
agents/src/agents/config/: agents.yaml  tasks.yaml  tasks_feed.yaml  tasks_fire.yaml  tasks_health.yaml  tasks_onboarding.yaml  tasks_tax.yaml
agents/src/agents/tools/: __init__.py  custom_tool.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/pages/: CouplePlanner.jsx  Dashboard.jsx  HealthScore.jsx
gen_ai/Money/agents/: .env.example  .gitignore  README.md  pyproject.toml  run_server.py
gen_ai/Money/agents/src/agents/: __init__.py  e2e_terminal.py
gen_ai/Money/agents/src/agents/backend/: app.py
gen_ai/Money/agents/src/agents/config/: tasks_fire.yaml  tasks_health.yaml  tasks_onboarding.yaml  tasks_tax.yaml
gen_ai/Money/agents/src/agents/tools/: __init__.py  custom_tool.py  tools.py
src/agents/: api.py  crew.py  e2e_terminal.py  main.py
src/agents/config/: agents.yaml  tasks.yaml  tasks_feed.yaml
src/agents/tools/: custom_tool.py
